[Bug 505278] - nsWifiAccessPoint::GetSsid doesn't do what it thinks it does with embedded nulls. r=dbaron